...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--PokenDex-->
        <scene sceneID="dDX-HI-gh7">
            <objects>
                <collectionViewController storyboardIdentifier="PokemonViewController" id="Twl-11-IIx" customClass="PokedexController" customModule="PokenDex" customModuleProvider="target" sceneMemberID="viewController">
                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="3Zb-oB-F6k">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="20" minimumInteritemSpacing="20" id="wQ1-3b-61y">
                            <size key="itemSize" width="130" height="80"/>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="erc-N9-q8I" id="W0y-L0-bXf"/>
                            <outlet property="delegate" destination="erc-N9-q8I" id="06Y-YT-Koc"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Favourites" id="32h-rn-pHa">
                        <barButtonItem key="backBarButtonItem" title="Favourites" id="Rrd-dD-SgZ"/>
                    </navigationItem>
                    <connections>
                        <outlet property="favouritesTable" destination="ipu-zQ-sAR" id="fTA-EN-6lC"/>
                    </connections>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="byH-B6-4QC" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="9577.5" y="1722.8873239436621"/>
        </scene>
...
                                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Np0-pQ-Agh" userLabel="Segmented Control">
                                                <rect key="frame" x="103" y="14" width="169" height="29"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" secondItem="Np0-pQ-Agh" secondAttribute="height" multiplier="300" id="2cv-KR-Cfe"/>
                                                </constraints>
                                                <segments>
                                                    <segment title="Description"/>
                                                    <segment title="Stats"/>
                                                </segments>
                                                <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <variation key="default">
                                                    <mask key="constraints">
                                                        <exclude reference="2cv-KR-Cfe"/>
                                                    </mask>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="eef-LK-osO" id="xZZ-j1-Ih4"/>
                            <outlet property="delegate" destination="eef-LK-osO" id="vNx-TE-2IK"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Dev Team" id="bKA-ur-eaE">
                        <barButtonItem key="backBarButtonItem" title="Dev Team" id="Jb3-Tn-TTy"/>
                    </navigationItem>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="wdp-5X-tHr" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="9578" y="96"/>
...
                                <include reference="pTG-yk-py3"/>
                                <include reference="a30-gx-08L"/>
                                <include reference="gLy-tU-3w9"/>
                            </mask>
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Identify" id="Ygn-dB-bIe">
                        <barButtonItem key="rightBarButtonItem" title="Item" image="camera" id="fMy-mN-EaS">
                            <connections>
                                <action selector="cameraPressed:" destination="Z4s-ig-v2d" id="o4L-5l-cih"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
