...
        if searchActive {
            if let indexPath = collectionView?.indexPathForItem(at: p) {
                let blurEffect = UIBlurEffect(style: .light)
                let visualEffectView = UIVisualEffectView(effect: blurEffect)
                visualEffectView.frame = view.frame
                let alert = UIAlertController(title: "Add \(pokemonArrayFiltered[indexPath.item]?.name?.capitalizingFirstLetter() ?? "Pokemon") to Favourites?", message: "", preferredStyle: .alert)
                alert.view.accessibilityIdentifier = "AddingAlert"
                let action = UIAlertAction(title: "Add Pokemon", style: .default) { (action) in
                    
                    do {
                        self.loadPokemon()
                        let context = (UIApplication.shared.delegate as! AppDelegate).persistentContainer.viewContext
                        let request : NSFetchRequest<Favourites> = Favourites.fetchRequest()
                        if let url = self.pokemonArrayFiltered[indexPath.item]?.url {
...
