...
        
        let pokName = cell.viewWithTag(3001) as? UILabel
        let pokImage = cell.viewWithTag(3002) as? UIImageView
        
        if let pokName = pokName, let pokImage = pokImage {
            
            pokName.accessibilityIdentifier = "nameLabel"
            let currentPokemon = favourites[indexPath.item]
            pokName.text = currentPokemon.name
            pokImage.kf.setImage(with: URL(string: currentPokemon.image!))
        }
        
        return cell
...
